--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,38 @@
-gradle
+
 out
 *.class
 .idea
 .gradle
 *.iml
 *.xml
-*.mp3
 *.csv
-*.jar
-application.properties
+application.properties 
 gradle-app.setting
 !gradle-wrapper.jar
 .gradletasknamecache
+
+.gradle
+/build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
